...
      return
    }

    if let indexPath = dragDropCollectionView.indexPathForItem(at: point),
      let uuid = self.items[indexPath.row].uuid {
      let alertView =
        UIAlertController(title: "Delete item",
                          message: "Do you really want to delete the item  with identifier  \(uuid) ?",
                          preferredStyle: .alert)
      let okAction = UIAlertAction(title: "OK", style: .default, handler: { _ in
        UIView.animate(withDuration: 1.0, animations: {
          // self.dragDropCollectionView.setContentOffset(CGPoint.zero, animated: false)
          self.dragDropCollectionView.performBatchUpdates({
            self.items.remove(at: indexPath.row)
            self.dragDropCollectionView.deleteItems(at: [indexPath])
          })
        }, completion: nil)
      })
      let canselAction = UIAlertAction.init(title: "cancel", style: .cancel, handler: { _ in
      })
      alertView.addAction(canselAction)
      alertView.addAction(okAction)
      alertView.view.layoutIfNeeded()
      self.present(alertView, animated: true, completion: nil)
    }
...
