...
                                                    <rect key="frame" x="2" y="2" width="196" height="196"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NCL-gs-I6E">
                                                    <rect key="frame" x="170" y="0.0" width="30" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                    <state key="normal" image="delete"/>
                                                    <connections>
                                                        <action selector="removeCell:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b9Y-iA-a4z"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                        </view>
...
                                        <rect key="frame" x="85" y="210" width="150" height="150"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+  Add" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wv0-mh-ytx">
                                                    <rect key="frame" x="46" y="47" width="58" height="56"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="56" id="P2w-CY-ZQE"/>
                                                        <constraint firstAttribute="width" constant="58" id="RQo-0A-5mz"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="23"/>
...
